# hs_sfm

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  dependencies.txt
unit_test/: CMakeLists.txt  test_main.cpp
unit_test/bundle_adjustment/: CMakeLists.txt  test_ba_gcp_constrained_compare_to_naive.cpp  test_ba_gcp_constrained_gauge.cpp  test_ba_gcp_constrained_jacobian_matrix_calculator.cpp  test_ba_gcp_constrained_normal_equation_builder.cpp  test_ba_gcp_constrained_relative_data_generator.cpp  test_ba_gcp_constrained_vector_function.cpp  test_ba_naive_base.hpp  test_ba_naive_ground_truth.cpp  test_ba_naive_jac.cpp  test_ba_naive_jacobian_matrix_calculator.cpp  test_ba_naive_monte_carlo_simulate.cpp  test_ba_naive_nllso_levenberg_marquardt.cpp  test_ba_naive_nllso_normal_equation_builder.cpp  test_ba_naive_nllso_normal_equation_solver.cpp  test_ba_naive_noised_x_generator.hpp  test_ba_naive_noised_y_generator.hpp  test_ba_naive_normal_mle_meta.hpp  test_ba_naive_vec_func.cpp  test_ba_naive_vector_function.cpp  test_ba_naive_xcov_calculator.cpp  test_camera_shared_analytical_derivative.cpp  test_camera_shared_jacobian_matrix_calculator.cpp  test_camera_shared_levenberg_marquardt_optimizor.cpp  test_camera_shared_monte_carlo_simulate.cpp  test_camera_shared_normal_equation_builder.cpp  test_camera_shared_normal_equation_builder.hpp  test_camera_shared_normal_equation_solver.cpp  test_camera_shared_normal_equation_solver.hpp  test_camera_shared_normal_mle_meta.hpp  test_camera_shared_relative_pair.cpp  test_camera_shared_vector_function.cpp  test_general_vector_function.cpp
unit_test/calibrate/: CMakeLists.txt  test_planar_calibrator.cpp
unit_test/essential/: CMakeLists.txt  synthetic_data_generator.hpp  test_ematrix_5_points_calculator.cpp  test_ematrix_5_points_ransac_refiner.cpp  test_ematrix_extrinsic_params_points_calculator.cpp
unit_test/fundamental/: CMakeLists.txt  test_linear_8_points_calculator.cpp  test_linear_8_points_ransac_refiner.cpp
unit_test/homography/: CMakeLists.txt  test_homography2d_analytical_jacobian_matrix_calculator.cpp  test_homography2d_dlt_calculator.cpp  test_homography2d_vector_function.cpp
unit_test/incremental/: data_tester.hpp  real_data_generator.hpp  real_synthetic_data_generator.hpp  synthetic_data_generator.hpp  test_bundle_adjustment_gcp_constrained_optimizor.cpp  test_incremental.cpp  test_scene_expandor.cpp  test_scene_expandor_gcp_constrained.cpp  test_scene_spanner.cpp
unit_test/projective/: CMakeLists.txt  test_pmatrix_dlt_calculator.cpp  test_pmatrix_dlt_ransac_refiner.cpp  test_single_camera_params_maximum_likelihood_estimator.cpp
unit_test/sfm_file_io/: CMakeLists.txt  test_loader_saver_consistency.cpp
unit_test/sfm_pipeline/: CMakeLists.txt  data_tester.hpp  real_data_generator.hpp  sfm_pipeline_tester.hpp  (+9 more)
(+219 files in other folders)
